--- a/app/styles/(component_styles)/marquee.module.css
+++ b/app/styles/(component_styles)/marquee.module.css
@@ -1,30 +1,20 @@
 .yourMarquee {
-  animation: marquee 45s linear infinite;
-  min-width: 100%;
+  animation: marquee 90s linear infinite;
   position: relative;
   display: flex;
   flex-flow: row nowrap;
-  max-width: 100vw;
-}
-
-.marqueeSpan {
-  margin-right: 3em;
-  position: relative;
-  left: 0px;
-  color: #a3c9c9;
-  font-weight: 500;
-  opacity: 0.8;
+  min-width: max-content;
 }
 
 @keyframes marquee {
   0% {
+    -moz-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+  100% {
     -moz-transform: translateX(100%);
     -webkit-transform: translateX(100%);
     transform: translateX(100%);
-  }
-  100% {
-    -moz-transform: translateX(-100%);
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
   }
 }
