--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,7 @@
 
   /* orange */
   --orange-lightest: #ffeee0;
+  --orange-light-alt: #ffe3ce;
   --orange-light: #ffd5b5;
   --orange-light-50: #f1c4be50;
   --orange-mid-light: #ffc493;
